--- a/core/template/dashboard/cmd.action.other.tmplimg.html
+++ b/core/template/dashboard/cmd.action.other.tmplimg.html
@@ -14,23 +14,31 @@
   <script>
     jeedom.cmd.update['#id#'] = function(_options) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
-      if ('#_time_widget_#' != '1') cmd.find('.timeCmd').parent().remove()
+      if ('#_time_widget_#' != '1') {
+        cmd.find('.timeCmd').parent().remove()
+      }
 
       if (_options.display_value == '1' || _options.display_value >= 1 || _options.display_value == '99' || _options.display_value == 99 || _options.display_value == 'on') {
         cmd.attr('data-state','on')
         if (jeedom.cmd.normalizeName('#name#') == 'on') {
           cmd.hide()
-        } else {
-          cmd.show().find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
-          if ('#_time_widget_#' == '1') jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
         }
-      } else if (_options.display_value == '0' || _options.display_value == 0 ||  _options.display_value == 'off') {
+        else {
+          cmd.show().find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
+          if ('#_time_widget_#' == '1') {
+            jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
+          }
+        }
+      } else {
         cmd.attr('data-state','off');
         if (jeedom.cmd.normalizeName('#name#') == 'off') {
           cmd.hide()
-        } else {
+        }
+        else {
           cmd.show().find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
-          if ('#_time_widget_#' == '1') jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
+          if ('#_time_widget_#' == '1') {
+            jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
+          }
         }
       }
 
@@ -38,11 +46,13 @@
       if (!isNaN('#_desktop_width_#')) {
         style = 'width:#_desktop_width_#px !important;'
       }
-      cmd.find('.imgCmd img').attr('style',style)
-      cmd.off('changeThemeEventCmd').on('changeThemeEventCmd', function (event, theme) {
+      cmd.find('.imgCmd img').attr('style', style)
+
+      cmd.off('changeThemeEventCmd').on('achangeThemeEventCmd', function(event, theme) {
         if (cmd.attr('data-state') == 'on') {
           cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
-        }else{
+        }
+        else {
           cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
         }
         var style = ''
@@ -52,7 +62,6 @@
         cmd.find('.imgCmd img').attr('style',style)
       })
     }
-
     jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
 
     $('.cmd[data-cmd_uid=#uid#] .imgCmd').off().on('click', function () {
