--- a/core/template/dashboard/cmd.action.other.tmplicon.html
+++ b/core/template/dashboard/cmd.action.other.tmplicon.html
@@ -9,32 +9,39 @@
     <span class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></span>
   </div>
   <script>
-    jeedom.cmd.update['#id#'] = function(_options){
-      var cmd = $('.cmd[data-cmd_id=#id#]');
-      if('#_time_widget_#' == '1'){
-        jeedom.cmd.displayDuration(_options.valueDate,  cmd.find('.timeCmd'));
-      }else{
-        cmd.find('.timeCmd').parent().remove();
+    jeedom.cmd.update['#id#'] = function(_options) {
+      var cmd = $('.cmd[data-cmd_id=#id#]')
+      if ('#_time_widget_#' != '1') {
+        cmd.find('.timeCmd').parent().remove()
       }
-      if (_options.display_value == '1' || _options.display_value >= 1 || _options.display_value == '99' || _options.display_value == 'on') {
+
+      if (_options.display_value == '1' || _options.display_value >= 1 || _options.display_value == '99' || _options.display_value == 99 || _options.display_value == 'on') {
         if (jeedom.cmd.normalizeName('#name#') == 'on') {
-          cmd.hide();
-        }else{
-          cmd.show();
-          cmd.find('.iconCmd').empty().append("#_icon_on_#");
+          cmd.hide()
         }
-      } else if (_options.display_value == '0' || _options.display_value == 0 ||  _options.display_value == 'off') {
+        else {
+          cmd.show().find('.iconCmd').empty().append("#_icon_on_#")
+          if ('#_time_widget_#' == '1') {
+            jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
+          }
+        }
+      }
+      else {
         if (jeedom.cmd.normalizeName('#name#') == 'off') {
-          cmd.hide();
-        }else{
-          cmd.show();
-          cmd.find('.iconCmd').empty().append("#_icon_off_#");
+          cmd.hide()
+        }
+        else {
+          cmd.show().find('.iconCmd').empty().append("#_icon_off_#")
+          if ('#_time_widget_#' == '1') {
+            jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
+          }
         }
       }
     }
-    jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+
     $('.cmd[data-cmd_uid=#uid#] .iconCmd').off().on('click', function () {
-      jeedom.cmd.execute({id: '#id#'});
-    });
+      jeedom.cmd.execute({id: '#id#'})
+    })
   </script>
 </div>
