--- a/core/template/mobile/cmd.action.other.tmpliconline.html
+++ b/core/template/mobile/cmd.action.other.tmpliconline.html
@@ -5,26 +5,29 @@
   </center>
 </div>
 <script>
-  jeedom.cmd.update['#id#'] = function(_options){
-    var cmd = $('.cmd[data-cmd_id=#id#]');
+  jeedom.cmd.update['#id#'] = function(_options) {
+    var cmd = $('.cmd[data-cmd_id=#id#]')
+
     if (_options.display_value == '1' || _options.display_value >= 1 || _options.display_value == '99' || _options.display_value == 99 || _options.display_value == 'on') {
       if (jeedom.cmd.normalizeName('#name#') == 'on') {
-        cmd.hide();
-      }else{
-        cmd.show();
-        cmd.find('.iconCmdLine').empty().append("#_icon_on_#");
+        cmd.hide()
       }
-    } else {
+      else {
+        cmd.show().find('.iconCmdLine').empty().append("#_icon_on_#")
+      }
+    }
+    else {
       if (jeedom.cmd.normalizeName('#name#') == 'off') {
-        cmd.hide();
-      }else{
-        cmd.show();
-        cmd.find('.iconCmdLine').empty().append("#_icon_off_#");
+        cmd.hide()
+      }
+      else {
+        cmd.show().find('.iconCmdLine').empty().append("#_icon_off_#")
       }
     }
   }
-  jeedom.cmd.update['#id#']({display_value:'#state#'});
+  jeedom.cmd.update['#id#']({display_value: '#state#'})
+
   $('.cmd[data-cmd_uid=#uid#] .iconCmdLine').off().on('click', function() {
-    jeedom.cmd.execute({id: '#id#'});
-  });
+    jeedom.cmd.execute({id: '#id#'})
+  })
 </script>
