bugfix css spinner

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -4547,6 +4547,9 @@ Desktop
     margin-left: 0;
     margin-top: 0;
   }
+  .form-group .ui-spinner {
+    width: 100%;
+  }
 
   /* Designs */
   .nav>li>a:focus,
