--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -4547,7 +4547,7 @@ Desktop
     margin-left: 0;
     margin-top: 0;
   }
-  .form-group .ui-spinner {
+  .form-group div[class*="col-"] > .ui-spinner {
     width: 100%;
   }
 
