--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1304,6 +1304,7 @@ Desktop
 
   [data-page="dashboard"] #dashOverviewPrev .topPreview .name {
     max-width: 100%;
+    height: 22px;
   }
 
   [data-page="dashboard"] #div_displayObject {
