--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1117,12 +1117,6 @@ Desktop
     transition-property: padding;
     transition: 0.5s
   }
-  .objectPreview:hover .topPreview > .name > i {
-    color: var(--link-color);
-    padding-right: 15px;
-    transition-property: padding;
-    transition: 0.5s
-  }
   .objectPreview:hover .topPreview {
     box-shadow: 0 10px 15px 0 rgba(0,0,0,0.2);
   }
@@ -1303,8 +1297,10 @@ Desktop
   }
 
   [data-page="dashboard"] #dashOverviewPrev .topPreview .name {
-    max-width: 100%;
+    max-width: 103%;
     height: 22px;
+    width: 103%;
+    font-size: 15px;
   }
 
   [data-page="dashboard"] #div_displayObject {
