--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -2424,6 +2424,9 @@ Desktop
     background: var(--bg-modal-color);
     padding-bottom: 1em;
   }
+  #modalDisplay .floatingbar {
+    top: 95px;
+  }
   :not(.panel-info):not(.panel-success):not(.panel-primary):not(.panel-warning):not(.panel-danger) > .panel-heading {
     background-color: rgb(var(--defaultBkg-color)) !important;
     border-bottom: 1px solid rgb(var(--bg-color), 1);
