--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -4555,7 +4555,7 @@ Desktop
     margin-left: 0;
     margin-top: 0;
   }
-  .form-group .ui-spinner {
+  .tab-content .form-group .ui-spinner {
     width: 100%;
   }
 
