trim sliders templates
(cherry picked from commit a5e5bc501508aadd402e37ee42f051492b3c27ac)

--- a/core/template/dashboard/cmd.action.slider.tmplicon.html
+++ b/core/template/dashboard/cmd.action.slider.tmplicon.html
@@ -36,7 +36,7 @@
     }
 
     mySlider#id#.on('end', function(values, handle) {
-      jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '')}})
+      jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '').trim()}})
     })
 
     $('.cmd[data-cmd_id=#id#] .iconCmd').on('click', function() {
