--- a/core/template/mobile/cmd.action.slider.tmplimg.html
+++ b/core/template/mobile/cmd.action.slider.tmplimg.html
@@ -27,7 +27,7 @@
     }
 
     mySlider#id#.on('end', function(values, handle) {
-      jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '')}})
+      jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '').trim()}})
     })
 
     $('.cmd[data-cmd_id=#id#] .imgCmd').on('click', function() {
