--- a/core/themes/core2019_Legacy/desktop/colors.css
+++ b/core/themes/core2019_Legacy/desktop/colors.css
@@ -59,8 +59,8 @@ colors Legacy
   --cat-other-BtnColor: rgb(65, 228, 196);
   --cat-scenario-BtnColor: rgb(230, 230, 235);
 
-  --url-iconsDark: url(../img/ui-icons-white.png);
-  --url-iconsLight: url(../img/ui-icons-black.png);
+  --url-iconsDark: url(/desktop/img/ui-icons-white.png);
+  --url-iconsLight: url(/desktop/img/ui-icons-black.png);
 
   --lb-info-color: rgb(110, 180, 240);
   --lb-yellow-color: rgb(250, 225, 0);
