--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -4703,11 +4703,7 @@ div.div_viewZone legend.lg_viewZone {
     color : var(--linkHoverLight-color) !important;
   }
 
-  :not(.tableCmdcss) .cmdName {
-    font-size: 12px;
-    font-weight: 400;
-  }
-  :not(.tableCmdcss) .cmd:not(.label) .state,
+  .cmd:not(.label) .state,
   .cmd {
     color: var(--link-color) !important;
     font-size: 12px;
@@ -4729,7 +4725,7 @@ div.div_viewZone legend.lg_viewZone {
     padding: 1px;
   }
 
-  .cmd.label .cmdName{
+  .cmd.label .cmdName {
     color : var(--linkHoverLight-color) !important;
   }
 
