--- a/core/template/scenario/event.default.html
+++ b/core/template/scenario/event.default.html
@@ -4,6 +4,8 @@
 	<span class="input-group-btn">
 		<a class="btn btn-default form-control listCmdInfo" data-cmd_id="#id#" data-uid="#uid#"><i class="fas fa-list-alt"></i></a>
 	</span>
+</div>
+<div class="input-group input-group-sm" style="width: 100%">
 	<span class="input-group-addon" style="width: 100px">{{Valeur}}</span>
 	<input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="value" placeholder="{{Valeur}}" value="#value#" data-cmd_id="#id#" data-uid="#uid#"/>
 	<span class="input-group-btn">
