Add more readability to Equipment inputbox
Very often the full name of the equipment does not fit in the `Name` input field.
So having `Euipment` and `Value` input on 2 lines helps with readability.

--- a/core/template/scenario/equipement.default.html
+++ b/core/template/scenario/equipement.default.html
@@ -4,6 +4,8 @@
   <span class="input-group-btn">
     <a class="btn btn-default listEquipementInfo" data-cmd_id="#id#" data-uid="#uid#" tooltip="{{Sélectionner un équipement}}" ><i class="fas fa-list-alt"></i></a>
   </span>
+</div>
+<div class="input-group input-group-sm" style="width: 100%">
   <span class="input-group-addon">{{Action}}</span>
   <select class="expressionAttr form-control input-sm roundedRight" data-l1key="options" data-l2key="action" data-option_id="#id#" data-uid="#uid#">
     <option value="show">{{Visible}}</option>
