--- a/core/template/dashboard/cmd.action.slider.value.html
+++ b/core/template/dashboard/cmd.action.slider.value.html
@@ -54,7 +54,7 @@
         }
       })
 
-      mySlider#id#.on('end', function(values, handle) {
+      mySlider#id#.on('change', function(values, handle) {
         jeedom.cmd.execute({id: '#id#', value: {slider: values[handle]}})
       })
     }
