--- a/core/template/mobile/cmd.action.slider.timeShutter.html
+++ b/core/template/mobile/cmd.action.slider.timeShutter.html
@@ -32,7 +32,7 @@
       $('.cmd[data-cmd_id=#id#]').find('div.shuttergauge-value').style('background', '#color#', 'important')
     }
 
-    mySlider#id#.on('end', function(values, handle) {
+    mySlider#id#.on('change', function(values, handle) {
       jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '').trim()}})
     })
 
