--- a/core/template/mobile/cmd.action.slider.tmplicon.html
+++ b/core/template/mobile/cmd.action.slider.tmplicon.html
@@ -36,7 +36,7 @@
       }
     })
 
-    mySlider#id#.on('end', function(values, handle) {
+    mySlider#id#.on('change', function(values, handle) {
       jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '').trim()}})
     })
 
