--- a/core/template/dashboard/cmd.action.slider.value.html
+++ b/core/template/dashboard/cmd.action.slider.value.html
@@ -44,18 +44,18 @@
       }
 
       mySlider#id#.on('update', function(values, handle) {
-        var value = values[handle]
+        var value = values[handle].replace('#unite#', '').trim()
         if (values[handle]) {
-          if (parseInt(values[handle]) == parseFloat(values[handle])) {
-            $inputNumber#id#.val(parseInt(values[handle]))
+          if (parseInt(value) == parseFloat(value)) {
+            $inputNumber#id#.val(parseInt(value))
           } else {
-            $inputNumber#id#.val(parseFloat(values[handle]))
+            $inputNumber#id#.val(parseFloat(value))
           }
         }
       })
 
       mySlider#id#.on('change', function(values, handle) {
-        jeedom.cmd.execute({id: '#id#', value: {slider: values[handle]}})
+        jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '').trim()}})
       })
     }
 
