--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -120,8 +120,9 @@ Desktop
   }
   #backgroundforJeedom > div {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: calc(100vw + var(--objectBackgroundBlur) * 2);
+    height: calc(100vh + var(--objectBackgroundBlur) * 2);
+    left: calc(0px - var(--objectBackgroundBlur));
     opacity: var(--bkg-opacity-light);
     background-size: cover !important;
     background-position: right bottom !important;
