--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -109,8 +109,9 @@
   }
   #backgroundforJeedom > div {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: calc(100vw + var(--objectBackgroundBlur) * 2);
+    height: calc(100vh + var(--objectBackgroundBlur) * 2);
+    left: calc(0px - var(--objectBackgroundBlur));
     opacity: var(--bkg-opacity-light);
     background-size: cover !important;
     background-position: right bottom !important;
