bugfix drawGraphInfo() with negative values

--- a/desktop/css/coreWidgets.css
+++ b/desktop/css/coreWidgets.css
@@ -10,7 +10,7 @@ Desktop
 
   div.eqlogicbackgraph {
     width: 100%;
-    height: calc(100% - 30px);
+    height: 100%;
     position: absolute;
     bottom: 0;
     left: 0;
