--- a/mobile/css/coreWidgets.css
+++ b/mobile/css/coreWidgets.css
@@ -60,7 +60,7 @@ Mobile WebApp
 
   div.eqlogicbackgraph {
     width: 100%;
-    height: calc(100% - 30px);
+    height: 100%;
     position: absolute;
     bottom: 1px;
     left: 0;
