bugfix no folder shown for actions

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -77,6 +77,10 @@ Desktop
     content: " ";
     white-space: pre;
   }
+  i.icon-blank {
+    width: 14px;
+    margin: 4px;
+  }
 
   .disabled {
     pointer-events: none;
