--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -2911,26 +2911,21 @@ div.div_viewZone legend.lg_viewZone {
   select.disabled,
   input.disabled,
   input[disabled],
-  select[disabled] {
-    cursor: not-allowed !important;
-    opacity: 0.65;
-  }
-
-  select:disabled,
-  input:disabled {
-    opacity: 0.7 !important;
-  }
-
+  select[disabled],
   .disabled .btn:not(.enabled),
   .disabled input:not(.enabled),
+  .disabled input[type=checkbox]:not(.enabled),
   .disabled button:not(.enabled),
   .disabled span:not(.enabled),
   .disabled button:not(.enabled) i,
-  .disabled a:not(.enabled) > i {
+  .disabled a:not(.enabled) > i,
+  select:disabled,
+  input:disabled {
     cursor: not-allowed !important;
-    filter: alpha(opacity=65);
-    opacity: .65;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
   }
+
   a.disabled,
   a.disabled > i {
     cursor: default !important;
