--- a/core/template/dashboard/cmd.action.slider.value.html
+++ b/core/template/dashboard/cmd.action.slider.value.html
@@ -64,6 +64,7 @@
     }
 
     $inputNumber#id#.on('focusout', function(event) {
+      clearTimeout(spinTimer#id#)
       if ($(this).attr('value') == $(this).attr('aria-valuenow')) return false
       if ('#noslider#' != '1') mySlider#id#.set(this.value)
       jeedom.cmd.execute({id: '#id#', value: {slider: this.value}})
